# AugustEngine

./: .clinerules  .gitignore  CMakeLists.txt  README.md  Utils.cpp  Utils.h  main.cpp  todo.todo
assets/shaders/: vertShader.glsl
include/AugustEngine/: Camera.h  Utils.h
include/AugustEngine/math/: Mat4.h  Vec3.h
shaders/: fragShader.glsl  vertShader.glsl
src/: Camera.cpp  Utils.cpp  main.cpp
src/math/: Mat4.cpp  Vec3.cpp
